@@ -2,7 +2,6 @@ package com.akamai.ds2.converter;
 
 import com.akamai.ds2.converter.constants.Constants;
 import com.akamai.ds2.converter.constants.ConverterConstants;
-import com.akamai.ds2.converter.constants.SettingsConstants;
 import com.akamai.ds2.converter.util.SettingsUtil;
 import com.akamai.ds2.converter.util.helpers.ConverterWorker;
 import org.apache.kafka.clients.consumer.ConsumerConfig;
@@ -29,7 +28,7 @@ public class App implements Runnable {
     private static final Logger logger = LogManager.getLogger(Constants.DEFAULT_APP_NAME);
 
     public static String getId() throws IOException {
-        try (Scanner s = new Scanner(Runtime.getRuntime().exec("hostname").getInputStream()).useDelimiter("\\A")) {
+        try (Scanner s = new Scanner(Runtime.getRuntime().exec(new String[]{"hostname"}).getInputStream()).useDelimiter("\\A")) {
             return s.hasNext() ? s.next() : "";
         }
     }
@@ -41,9 +40,6 @@ public class App implements Runnable {
 
         Properties properties = new Properties();
 
-        properties.setProperty(SettingsConstants.KAFKA_AUTH_PROTOCOL_ATTRIBUTE_ID, SettingsConstants.DEFAULT_KAFKA_AUTH_PROTOCOL);
-        properties.setProperty(SettingsConstants.KAFKA_AUTH_MECHANISM_ATTRIBUTE_ID, SettingsConstants.DEFAULT_KAFKA_AUTH_MECHANISM);
-        properties.setProperty(SettingsConstants.KAFKA_AUTH_CONFIG_ATTRIBUTE_ID, String.format(SettingsConstants.DEFAULT_KAFKA_AUTH_CONFIG, SettingsUtil.getKafkaAuthUser(), SettingsUtil.getKafkaAuthPassword()));
         properties.setProperty(ConsumerConfig.BOOTSTRAP_SERVERS_CONFIG, SettingsUtil.getKafkaBrokers());
         properties.setProperty(ConsumerConfig.GROUP_ID_CONFIG, Constants.DEFAULT_APP_NAME);
         properties.setProperty(ConsumerConfig.CLIENT_ID_CONFIG, getId());
@@ -61,9 +57,6 @@ public class App implements Runnable {
 
         Properties properties = new Properties();
 
-        properties.setProperty(SettingsConstants.KAFKA_AUTH_PROTOCOL_ATTRIBUTE_ID, SettingsConstants.DEFAULT_KAFKA_AUTH_PROTOCOL);
-        properties.setProperty(SettingsConstants.KAFKA_AUTH_MECHANISM_ATTRIBUTE_ID, SettingsConstants.DEFAULT_KAFKA_AUTH_MECHANISM);
-        properties.setProperty(SettingsConstants.KAFKA_AUTH_CONFIG_ATTRIBUTE_ID, String.format(SettingsConstants.DEFAULT_KAFKA_AUTH_CONFIG, SettingsUtil.getKafkaAuthUser(), SettingsUtil.getKafkaAuthPassword()));
         properties.setProperty(ProducerConfig.BOOTSTRAP_SERVERS_CONFIG, SettingsUtil.getKafkaBrokers());
         properties.setProperty(ProducerConfig.CLIENT_ID_CONFIG, getId());
         properties.setProperty(ProducerConfig.KEY_SERIALIZER_CLASS_CONFIG, StringSerializer.class.getName());
